trunk/Archive2/c7/906394fa723b18/output
main.cpp: In function 'int main()':
main.cpp:8:5: warning: 'int main()' is deprecated (declared at main.cpp:6) [-Wdeprecated-declarations]
     main();
     ^
main.cpp:8:10: error: ISO C++ forbids taking address of function '::main' [-Wpedantic]
     main();
          ^
main.cpp:8:10: warning: 'int main()' is deprecated (declared at main.cpp:6) [-Wdeprecated-declarations]
